--- a/Mario-Run/index.html
+++ b/Mario-Run/index.html
@@ -10,6 +10,12 @@
 
 <body>
     <div id="game">
+        <div id="score-wrapper">
+            <h5>Highest:</h5>
+            <h5 id="highest-score">0</h5>
+            <h5>Score:</h5>
+            <h5 id="score">0</h5>
+        </div>
         <div id="character"></div>
         <div id="block"></div>
     </div>
