Added a game over banner

--- a/Mario-Run/index.html
+++ b/Mario-Run/index.html
@@ -16,8 +16,14 @@
             <h5>Score:</h5>
             <h5 id="score">0</h5>
         </div>
+        <div id="gameOver">
+            <h1>GAME OVER</h1>
+            <p>Refresh the page to play again</p>
+        </div>
         <div id="character"></div>
-        <div id="block"></div>
+        <div id="block">
+
+        </div>
     </div>
     <h1> How to play</h1>
     <ul>
