Added game over banner

--- a/Mario-Run/index.html
+++ b/Mario-Run/index.html
@@ -16,6 +16,9 @@
             <h5>Score:</h5>
             <h5 id="score">0</h5>
         </div>
+        <div id="gameOver">
+            <h1>GAME OVER</h1>
+        </div>
         <div id="character"></div>
         <div id="block"></div>
     </div>
